[tool.poetry]
name = "rhiz_tag"
version = "0.1.0"
description = "Ubiquitous General Purpose Tag"
authors = ["Jean-Louis Fuchs <safe.pen2857@rhizoome.ch>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

include = [
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[tool.poetry.scripts]
rhiz_tag = 'rhiz_tag:cli'

[tool.poetry.dependencies]
python = "^3.10"
click = { version = "^8.1", optional = true }

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.group.dev.dependencies]
click = "^8.1"
pytest = "^8.3.3"
mypy = "^1.11.2"
pdbpp = "^0.10.3"
ruff = "^0.6.7"
hypothesis = "^6.112.1"


[tool.poetry.group.lsp.dependencies]
python-lsp-server = "^1.12.0"
python-lsp-ruff = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
