[package]
name = "rhiz_tag_nostd"
version = "0.1.0"
edition = "2021"
description = "Ubiquitous General Purpose Tag"
authors = ["Jean-Louis Fuchs <safe.pen2857@rhizoome.ch>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "http://github.com/rhizoome/rhiz_tag"
repository = "http://github.com/rhizoome/rhiz_tag"
keywords = ["tag", "no-std", "date-and-time", "archival", "note-taking"]
categories = ["date-and-time", "no-std", "command-line-utilities"] 

[lib]
name = "rhiz_tag_nostd"
path = "src/lib.rs"

[[bin]]
name = "hypothesis"
path = "src/bin/hypothesis.rs"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
